fav/delete working

--- a/public/favorites.html
+++ b/public/favorites.html
@@ -27,7 +27,7 @@
         <p>Title: {{title}}<br>
         Author: {{author}}
         </p>
-        <button id="favButton" onclick="addToFavs({{{json this}}})" >Προσθήκη στα αγαπημένα</button>
+        <button id="favButton" onclick="addRemoveToFavs({{{json this}}})" >Προσθήκη στα αγαπημένα</button>
       </li>
       </article>
       {{/each}}
