--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
         Title: {{title}}<br>
         Author: {{author}}
         </p>
-        <button id="favButton" onclick="addToFavs({{{json this}}})" >Προσθήκη στα αγαπημένα</button>
+        <button id="favButton" onclick="addRemoveToFavs({{{json this}}},this)" >Προσθήκη στα αγαπημένα</button>
       </li>
       </article>
       {{/each}}
