moved delete button

--- a/public/favorites.html
+++ b/public/favorites.html
@@ -29,6 +29,7 @@
         Author: {{author}}
         </p>
         <button id="favButton" onclick="addToFavs({{{json this}}})" >Επεξεργασία στοιχείων</button>
+        <button id="favButton" onclick="removeFromFavs({{{json this}}})" >Αφαίρεση από τα αγαπημένα</button>
       </li>
       </article>
       {{/each}}
