--- a/public/favorites.html
+++ b/public/favorites.html
@@ -15,7 +15,7 @@
 
   <script src="/static/js/handlebars.js"></script>
 
-  <script src="/static/js/main.js"></script>
+  <script src="/static/js/favorites.js"></script>
 
   <script data-name="booksTemplate" type="text/x-handlebars-template">
     <ol>
