--- a/public/favorites.html
+++ b/public/favorites.html
@@ -52,7 +52,15 @@
     <h1>
       Αποθηκευμένα Βιβλία
     </h1>
+    <section>
+    <form method ="GET" action="">
+      <label for="bookTitle">Αναζήτηση βιβλίου:</label>
+      <input type="text" id="bookTitleInput" name="bookTitle"><br><br>
+    </form>
+  </section>
+  <section>
   <p id="results"></p>
+</section>
   </main>
   <footer>
     <p>Τσισκάκης Φώτιος - 3170162</p>
