--- a/public/favorites.html
+++ b/public/favorites.html
@@ -44,8 +44,8 @@
 </header>
 <nav>
     <ul>
-      <li><a href="/static/index.html" class="active">Αναζήτηση</a></li>
-      <li><a href="/static/favorites.html">Αγαπημένα</a></li>
+      <li><a href="/static/index.html">Αναζήτηση</a></li>
+      <li><a href="/static/favorites.html" class="active">Αγαπημένα</a></li>
     </ul>
 </nav>
   <main>
