FINAL no comments

--- a/public/editBook.html
+++ b/public/editBook.html
@@ -29,9 +29,9 @@
       Επεξεργασία Στοιχείων Βιβλίου
     </h1>
   <p id="results"></p>
-  </main>
   
-  <form>
+  
+  <form id="editForm">
     <label for="idPar">ID :</label>
     <p id="idPar"></p>
     <label for="bookTitle">Title:</label>
@@ -43,6 +43,7 @@
   </form>
   <button id="editButton" onclick="updateBook()">Ενημέρωση στοιχείων</button>
   <button id="cancelButton" onclick="cancelUpdate()">Ακύρωση</button>
+</main>
   <footer>
     <p>Τσισκάκης Φώτιος - 3170162</p>
   </footer>
